--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="ok">ok</string>
     <string name="title_activity_main2">Main2Activity</string>
     <string name="appbar_scrolling_view_behavior">dunno</string>
+    <string name="mot_de_passe">Password</string>
 </resources>
